monitoria/mac323/5-3-24/grades/Patrick-Abrahão-Menani_201356_assignsubmission_file_5.3.24.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

..CCC...
EP: Patrick-Abrahão-Menani_201356_assignsubmission_file_5.3.24
NOTA: 76
CORREÇÃO AUTOMÁTICA
920 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
3 Testes com Erro de Compilação (incui o bônus)

rm: não foi possível remover “judge_out/”: Arquivo ou diretório não encontrado
make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
Note: ./BoyerMoore.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m20.011s
user	0m20.028s
sys	0m0.024s
partially correct (200) perfeito
======= Booyer_007 ============

real	0m20.022s
user	0m20.016s
sys	0m0.032s
partially correct (200) perfeito
======= Brute_003 ============
BruteDoVictor.java:9: error: 'void' type not allowed here
            for (int i : Brute.findAll(StdIn.readString(), pat))
            ^
BruteDoVictor.java:9: error: for-each not applicable to expression type
            for (int i : Brute.findAll(StdIn.readString(), pat))
                                      ^
  required: array or java.lang.Iterable
  found:    void
2 errors
Compilation Error on Brute
======= Brute_004 ============
BruteDoVictor.java:9: error: 'void' type not allowed here
            for (int i : Brute.findAll(StdIn.readString(), pat))
            ^
BruteDoVictor.java:9: error: for-each not applicable to expression type
            for (int i : Brute.findAll(StdIn.readString(), pat))
                                      ^
  required: array or java.lang.Iterable
  found:    void
2 errors
Compilation Error on Brute
======= Brute_005 ============
BruteDoVictor.java:9: error: 'void' type not allowed here
            for (int i : Brute.findAll(StdIn.readString(), pat))
            ^
BruteDoVictor.java:9: error: for-each not applicable to expression type
            for (int i : Brute.findAll(StdIn.readString(), pat))
                                      ^
  required: array or java.lang.Iterable
  found:    void
2 errors
Compilation Error on Brute
======= KMP_000 ============
Note: ./KMP.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m0.155s
user	0m0.180s
sys	0m0.028s
partially correct (120) 120 linhas certas de 200. primeiro erro: linha 1 difere - operação: '200', esperado: '0 8 25 ', encontrado: '0 25 '
======= KMP_001 ============

real	0m0.160s
user	0m0.196s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.165s
user	0m0.200s
sys	0m0.016s
partially correct (200) perfeito
